tests/testerina-integration-test/src/test/resources/command-outputs/windows/InvalidDataProviderTestCase-testInvalidDataProvider2.txt
Code coverage is not yet supported with single bal files. Ignoring the flag and continuing the test run...
warning: ignoring --includes flag since code coverage is not enabled
Compiling source
	invalid-data-provider-test2.bal
WARNING [invalid-data-provider-test2.bal:(25:5,25:53)] unused variable 'fErr' (BCE20403)
   |
25 |     int|error fErr = trap fValue.cloneWithType(int);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

WARNING [invalid-data-provider-test2.bal:(26:5,26:53)] unused variable 'sErr' (BCE20403)
   |
26 |     int|error sErr = trap sValue.cloneWithType(int);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

WARNING [invalid-data-provider-test2.bal:(27:5,27:58)] unused variable 'resultErr' (BCE20403)
   |
27 |     int|error resultErr = trap result.cloneWithType(int);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Running Tests

	invalid-data-provider-test2.bal

testInvalidDataProvider2:0 has failed.


		Test execution time :*****ms


		[fail] testInvalidDataProvider2#0:

		    [fail data provider for the function testInvalidDataProvider2]
			 error {ballerina/test:0}ExecutionError ("error("{ballerina/lang.function}IncompatibleArguments",message="arguments of incompatible types: argument list '(int,int,int)' cannot be passed to function expecting parameter list '(string,string,string)'")
				callableName: call moduleName: ballerina.lang.function.0 fileName: function.bal lineNumber: 37
				callableName: executeTestFunction moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 129
				callableName: executeDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 115
				callableName: prepareDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 106
				callableName: executeDataDrivenTestSet moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 63
				callableName: executeTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 28
				callableName: executeTests moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 79
				callableName: startSuite moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 52
				callableName: __execute__  fileName: invalid-data-provider-test2.bal lineNumber: 39
			",functionName="testInvalidDataProvider2")
				callableName: handleTestFuncOutput moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 318
				callableName: executeTestFunction moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 130
				callableName: executeDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 115
				callableName: prepareDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 106
				callableName: executeDataDrivenTestSet moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 63
				callableName: executeTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 28
				callableName: executeTests moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 79
				callableName: startSuite moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 52
				callableName: __execute__  fileName: invalid-data-provider-test2.bal lineNumber: 39
			


		0 passing
		1 failing
		0 skipped
error: there are test failures
